Fixed overflow problem

--- a/public/stylesheets/picker.css
+++ b/public/stylesheets/picker.css
@@ -3,7 +3,7 @@ section.picker nav ul.choose {width: 100%; height: 100%; display: block; float: 
 section.picker nav ul.choose li.left {width: 15%; height: 100%; display: block; float: left; line-height: 55px;}
 
 section.picker {width: 35%; float: left;}
-section.picker nav {width: 100%; height: 100%; overflow:hidden; overflow-y:scroll;}
+section.picker nav {width: 100%; height: 100%; /* overflow:hidden; overflow-y:scroll; */}
 section.picker nav ul.choose { width: 100%; height: 100%; display: block; float: left; text-align: center;  background: #E5E5E5; color: #424242; height: 60px;}
 section.picker nav ul.choose li.left {width: 15%; height: 100%; display: block; float: left; line-height: 55px;}
 
