--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ html, body {
 	height: 100%;
 	margin: 0 auto;
 	font-family: 'Roboto', sans-serif;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 ul {
 	list-style: none;
